set img to vertical align middle to prevent descender space under

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -76,6 +76,7 @@ address {
 img {
   max-width: 100%;
   height: auto;
+  vertical-align: middle;
 }
 
 ol,
