--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -15,10 +15,6 @@
   margin-left: 1rem;
   margin-bottom: 1rem;
 
-  img {
-    display: block;
-  }
-
   @include media(sm) {
     float: none;
     flex: 0 0 auto;
