--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -3,13 +3,9 @@
 }
 
 .media--image {
-  img {
-    display: block;
-  }
 }
 
 .media--video {
-
 }
 
 .media__caption {
