--- a/src/scss/components/_program-panel.scss
+++ b/src/scss/components/_program-panel.scss
@@ -33,10 +33,6 @@
     z-index: 1;
     opacity: 0.8;
   }
-
-  img {
-    display: block;
-  }
 }
 
 .program-panel__content {
